# ComplianceGraph

./: .gitignore  README.md  cli.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: test.yml
app/: main.py
app/db/: models.py
app/parsers/: manual_input.py  mcp_scan_input.py
app/report/: pdf_generator.py
app/report/templates/: dashboard.html  report.html
app/risk_engine/: gap_analyzer.py  llm_explainer.py  tier_classifier.py
app/static/: style.css
tests/: test_api_endpoints.py  test_gap_analyzer.py  test_parsers.py  test_tier_classifier.py
tests/fixtures/: high_risk_sample.json  limited_risk_sample.json  minimal_risk_sample.json
