[project]
name = "compliancegraph"
version = "0.1.0"
description = "EU AI Act compliance layer for agentic AI systems"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "jinja2==3.1.4",
  "weasyprint==62.3",
  "click==8.1.7",
  "httpx==0.27.0"
]

[project.scripts]
compliancegraph = "cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
